[SB] Refactor Command to use ProcessBuilder